IE10 fix for justify alignment in menu

--- a/stylesheets/sass/styles.scss
+++ b/stylesheets/sass/styles.scss
@@ -82,13 +82,15 @@ header {
         list-style: none;
         display: block;
         margin: 0 auto;
-        text-align: justify;
-        font-size: 0;
-        &:after {
-            content: "";
-            width: 100%;
-            display: inline-block;
-        }
+        display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+        display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+        display: -ms-flexbox; /* TWEENER - IE 10 */
+        display: -webkit-flex; /* NEW - Chrome */
+        display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
+        -webkit-justify-content: space-between; 
+        justify-content: space-between;
+        -webkit-flex-wrap: wrap; /* Safari 6.1+ */
+        flex-wrap: wrap;
         li {
             display: inline-block;
             text-transform: uppercase;
